--- a/css/responsive.css
+++ b/css/responsive.css
@@ -66,6 +66,12 @@
       justify-content: center;
     }
 
+    .article-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+
     .article-img {
       width: 100%;
       margin-bottom: 20px;
