--- a/css/responsive.css
+++ b/css/responsive.css
@@ -77,6 +77,11 @@
       margin-bottom: 20px;
     }
 
+    .news-article {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
     .date {
       margin-bottom: 20px;
     }
